HealthyFoodShop/kubernetes-manifests/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthy-food-app
  namespace: healthyfood-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthy-food
  template:
    metadata:
      labels:
        app: healthy-food
    spec:
      containers:
        - name: healthy-food
          image: biled23/healthy-food-shop:latest
          ports:
            - containerPort: 8000
