HealthyFoodShop/kubernetes-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: healthy-food-service
  namespace: healthyfood-app
spec:
  selector:
    app: healthy-food
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
