HealthyFoodShop/kubernetes-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthy-food-ingress
  namespace: healthyfood-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthy-food-service
                port:
                  number: 80
    - host: healthy-food-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthy-food-service
                port:
                  number: 80
